# RotatorInterface

./: .gitignore.swp  BOM.xlsx  SPWM_Hbridge.TSC  angular_precision.ipynb  optoiso.xlsx
.ipynb_checkpoints/: angular_precision-checkpoint.ipynb
MCU/: AT24C.cpp  AT24C.h  Config.cpp  Lib485.cpp  Lib485.h  Lib595.cpp  Lib595.h  MCU.ino  MCU.ino.bak  New Text Document.txt  RotSensor.cpp  TaskSlot.cpp  TaskSlot.h  commands.cpp  commands.h  motor.cpp  motor.h  my_types.h
MCU/EEPROM_test/: EEPROM_test.ino  Lib485.h
MCU/data/: calibrate.html  config.html  coverage_fan.js  get_sensor.js  index.html  map_project.js  point.js  rotator_control.html  send_task.js  style.css
MCU/data_uncomp/: button.js  config.html  coverage_fan.js  get_sensor.js  index.html  map_project.js  point.js  send_task.js  style.css
MCU/tools/: compress_js.sh  merge_html.py
PCB/interface/: fp-DD85.tmp  fp-info-cache  interface-cache.lib  (+8 more)
Panel/: 12864程序代码和资料.rar
RotatorInterface_IDF/: CMakeLists.txt  Makefile  RoatorInterfact_IDF编译说明.txt  gen_SPWM.py  partitions.csv  sdkconfig  sdkconfig copy  sdkconfig.old
RotatorInterface_IDF/main/: ACS712.c  ACS712.h  AT24C.c  AT24C.h  CMakeLists.txt  COM.c  COM.h  Config.c  Config.h  Kconfig.projbuild  Lib595.c  Lib595.h  LoopBuffer.c  LoopBuffer.h  MultiLang.c  MultiLang.h  RotSensor.c  RotSensor.h  RotTask.c  RotTask.h  SPWM.c  SPWM.h  kfifo.c  kfifo.h  main.c  main.h  menu.c  menu.h  motor.c  motor.h  my_network.c  my_network.h  task_COM.c  task_RotSensor.c  task_RotatorTasks.c  task_display.c  task_display.h  task_human_input.c  webserver.c  webserver.h
(+164 files in other folders)
